Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
CRAN reports on 5.0.0:
checking whether package ‘arrow’ can be installed ... [43m/20m] WARNING Found the following significant warnings: /data/gannet/ripley/R/packages/tests-clang/arrow/libarrow/arrow-5.0.0/include/arrow/util/bitmap_reader.h:242:5: warning: anonymous structs are a GNU extension [-Wgnu-anonymous-struct] /data/gannet/ripley/R/packages/tests-clang/arrow/libarrow/arrow-5.0.0/include/arrow/util/bitmap_reader.h:242:5: warning: anonymous types declared in an anonymous union are an extension [-Wnested-anon-types] /data/gannet/ripley/R/packages/tests-clang/arrow/libarrow/arrow-5.0.0/include/arrow/util/bitmap_writer.h:263:5: warning: anonymous structs are a GNU extension [-Wgnu-anonymous-struct] /data/gannet/ripley/R/packages/tests-clang/arrow/libarrow/arrow-5.0.0/include/arrow/util/bitmap_writer.h:263:5: warning: anonymous types declared in an anonymous union are an extension [-Wnested-anon-types] See https://www.r-project.org/nosvn/R.check/r-devel-linux-x86_64-fedora-clang/arrow-00install.html for details.
https://github.com/apache/arrow/blob/apache-arrow-5.0.0/cpp/src/arrow/util/bitmap_reader.h#L242-L247
https://github.com/apache/arrow/blob/apache-arrow-5.0.0/cpp/src/arrow/util/bitmap_writer.h#L263-L268
This change was introduced in ARROW-13010 (cc niranda)
Aside from the fix, I'm not sure which of the build settings on https://www.stats.ox.ac.uk/pub/bdr/Rconfig/r-devel-linux-x86_64-fedora-clang is missing from our `fedora-clang-devel` build we test on nightly, but we should figure it out (or work with the r-hub maintainers on making a better base image).
Attachments
Issue Links
- depends upon
-
ARROW-13510 [CI][R][C++] Add -Wall to fedora-clang-devel as-cran checks
-
- Resolved
-
- links to