ARROW-13493  [C++] Anonymous structs in an anonymous union are a GNU extension

Closes #10833 from nirandaperera/ARROW-13493

Authored-by: niranda perera <niranda.perera@gmail.com>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>